<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:id="@+id/cardView"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardCornerRadius="5dp"
    android:transitionName="transistionCardView"
    card_view:cardElevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/ivLawyerPhoto"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/photo_of_lawyer"
            android:src="@drawable/facetest"
            android:transitionName="transistionLawyerPhoto" />

        <LinearLayout
            android:id="@+id/layerBasicData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/ivLawyerPhoto"
            android:layout_toRightOf="@+id/ivLawyerPhoto"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLawyerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyers_name"
                android:textColor="@android:color/black"
                android:transitionName="transistionLawyerName" />

            <TextView
                android:id="@+id/tvLawyerSpeciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speciality"
                android:transitionName="transistionLawyerSpeciality" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/llVerifiedSelect"
            android:layout_toLeftOf="@+id/llVerifiedSelect"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llRatingPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">


                <TextView
                    android:id="@+id/tvLawyerRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rating"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:src="@drawable/rating" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvLawyerPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/price"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvPerHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/h"
                    android:textColor="@android:color/black" />

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout

            android:id="@+id/llVerifiedSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/verifiedIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="4dp"
                android:transitionName="transistionVerifiedLogo"
                android:layout_marginRight="4dp"
                android:src="@drawable/verified_icon" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSelectIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp">


            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/small_arrow" />

        </RelativeLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>